# docs/openapi.json
@@ -7,11 +7,84 @@
   },
   "tags": [
     {
+      "name": "Auth",
+      "description": "Authentication resources"
+    },
+    {
       "name": "Article",
       "description": "Article resources"
     }
   ],
   "paths": {
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Login user",
+        "operationId": "login",
+        "requestBody": {
+          "$ref": "#/components/requestBodies/Auth"
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/Auth"
+          },
+          "400": {
+            "description": "Login failed"
+          }
+        }
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Register new user",
+        "operationId": "register",
+        "requestBody": {
+          "$ref": "#/components/requestBodies/Auth"
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/Auth"
+          },
+          "400": {
+            "description": "Register failed"
+          }
+        }
+      }
+    },
+    "/auth/whoami": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Get info current logged in user",
+        "operationId": "whoami",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          }
+        }
+      }
+    },
     "/articles": {
       "get": {
         "tags": [
@@ -43,6 +116,11 @@
         "summary": "Add new article",
         "description": "Create new",
         "operationId": "addArticle",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
         "requestBody": {
           "$ref": "#/components/requestBodies/Article"
         },
@@ -65,6 +143,9 @@
                 }
               }
             }
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
           }
         }
       }
@@ -77,6 +158,11 @@
         "summary": "Find article by ID",
         "description": "Returns a single Article",
         "operationId": "getArticleById",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
         "parameters": [
           {
             "$ref": "#/components/parameters/Article"
@@ -89,6 +175,9 @@
           "400": {
             "description": "Invalid ID supplied"
           },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
           "404": {
             "description": "Article not found"
           }
@@ -100,6 +189,11 @@
         ],
         "summary": "Edit article by ID",
         "description": "Updates a single article",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
         "parameters": [
           {
             "$ref": "#/components/parameters/Article"
@@ -128,6 +222,9 @@
               }
             }
           },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
           "404": {
             "description": "Article not found"
           }
@@ -139,6 +236,11 @@
         ],
         "summary": "Delete article by ID",
         "description": "Deletes a single article",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
         "parameters": [
           {
             "$ref": "#/components/parameters/Article"
@@ -150,6 +252,9 @@
           },
           "400": {
             "description": "Invalid ID supplied"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
           },
           "404": {
             "description": "Article not found"
@@ -176,6 +281,19 @@
             "example": "Dolor sit amet"
           }
         }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "example": 1
+          },
+          "username": {
+            "type": "string",
+            "example": "sabrina01"
+          }
+        }
       }
     },
     "requestBodies": {
@@ -199,6 +317,27 @@
             }
           }
         }
+      },
+      "Auth": {
+        "description": "Auth object",
+        "required": true,
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "sabrina01"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "selaluberbinar"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "responses": {
@@ -211,6 +350,33 @@
             }
           }
         }
+      },
+      "Auth": {
+        "description": "Auth success (token generated)",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "username": {
+                  "type": "string",
+                  "example": "sabrina01"
+                },
+                "accessToken": {
+                  "type": "string",
+                  "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwidXNlcm5hbWUiOiJzYWJyaW5hMDEiLCJpYXQiOjE2NTgyODQxNDR9.8OoPMiZOA6OSqQ5G8C_KHbfzeYc2VyajagMi8lPhdM8"
+                }
+              }
+            }
+          }
+        }
+      },
+      "Unauthorized": {
+        "description": "Authentication required"
       }
     },
     "parameters": {
